--- a/package.json
+++ b/package.json
@@ -3,22 +3,30 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "wdio run wdio.conf.js"
+    "build": "tsc",
+    "test": "ts-node ./test/specs/example.e2e.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/chai": "^5.2.1",
+    "@types/node": "^22.15.3",
     "@wdio/appium-service": "^9.12.7",
     "@wdio/cli": "^9.12.7",
     "@wdio/local-runner": "^9.12.7",
     "@wdio/mocha-framework": "^9.12.6",
     "@wdio/spec-reporter": "^9.12.6",
+    "@wdio/types": "^9.12.6",
     "appium": "^2.18.0",
-    "appium-uiautomator2-driver": "^4.2.3"
+    "appium-uiautomator2-driver": "^4.2.3",
+    "mocha": "^11.1.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   },
   "dependencies": {
-    "appium-chromedriver": "^7.0.17"
+    "appium-chromedriver": "^7.0.17",
+    "chai": "^5.2.0"
   }
 }
