--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
   "devDependencies": {
     "@types/chai": "^5.2.1",
     "@types/node": "^22.15.3",
+    "@wdio/allure-reporter": "^9.12.6",
     "@wdio/appium-service": "^9.12.7",
     "@wdio/cli": "^9.12.7",
+    "@wdio/junit-reporter": "^9.12.6",
     "@wdio/local-runner": "^9.12.7",
     "@wdio/mocha-framework": "^9.12.6",
     "@wdio/spec-reporter": "^9.12.6",
     "@wdio/types": "^9.12.6",
+    "allure-commandline": "^2.34.0",
     "appium": "^2.18.0",
     "appium-uiautomator2-driver": "^4.2.3",
     "mocha": "^11.1.0",
